# CleanFlow_AI

./: README.md
CleanFlow-AI-main/: __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
CleanFlow-AI-main/server/: app.py  dataclean_environment.py
